# GTKalc

./: CMakeLists.txt  README.md  buttons.h  main.c
